<resources>
    <string name="app_name">underPressure</string>
    <string name="title_home">Home</string>
    <string name="title_submit">Submit</string>
    <string name="title_my_leads">My Leads</string>
    <string name="home">Home</string>
    <string name="my_leads">My Leads</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_up_to_3_pictures">Submit up to 3 pictures:</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="_123_main_st_city_state">123 Main St, City, State</string>
    <string name="enter_address">Enter Address:</string>
    <string name="select_service_check_all_that_apply">Select Service (Check all that apply):</string>
    <string name="pressure_washing">Pressure Washing</string>
    <string name="exterior_paint">Exterior Paint</string>
    <string name="approximate_house_size">Approximate House Size:</string>
    <string name="_1000_sq_ft"><![CDATA[<1000 sq. ft]]></string>
    <string name="_1001_2000_sq_ft">1001-2000 sq. ft</string>
    <string name="_2001_3500_sq_ft">2001 - 3500 sq. ft</string>
    <string name="_3500_sq_ft">3500 sq. ft +</string>
    <string name="submitButton">Submit</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="welcome_please_login_or_register">Welcome! Please Login or Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="submit_a_picture">submit a picture</string>
    <string name="preview_of_captured_image">Preview of submitted picture</string>
</resources>