<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_service_check_all_that_apply"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <CheckBox
        android:id="@+id/check_pressure_washing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_washing"
        android:textColor="@color/white"/>

    <CheckBox
        android:id="@+id/check_exterior_paint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exterior_paint"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approximate_house_size"
        android:textSize="18sp"
        android:layout_marginTop="16sp"
        android:textColor="@color/white"/>

    <RadioGroup
        android:id="@+id/radio_group_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white">

        <RadioButton
            android:id="@+id/size_less_1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000_sq_ft"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/size_1000_2000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1001_2000_sq_ft"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/size_2000_3500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2001_3500_sq_ft"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/size_3500_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3500_sq_ft"
            android:textColor="@color/white"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

</LinearLayout>
